<resources>
    <string name="app_name">CurrencyExchanger</string>
    <string name="sell">Sell</string>
    <string name="receive">Receive</string>
    <string name="submit">submit</string>
    <string name="my_balances">MY BALANCES</string>
    <string name="balances_placeholder">BALANCES PLACEHOLDER</string>
    <string name="currency_exchange">CURRENCY EXCHANGE</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
</resources>