<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/balances_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_balances"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/balances_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/balances_placeholder"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/balances_label"
        app:layout_constraintTop_toBottomOf="@id/balances_label" />

    <TextView
        android:id="@+id/currency_exchange_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/currency_exchange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balances_placeholder" />

    <ImageView
        android:id="@+id/sell_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_exchange_label"
        app:tint="#FF0000"
        android:importantForAccessibility="no"
        />

    <TextView
        android:id="@+id/sell_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sell"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/sell_image"
        app:layout_constraintStart_toEndOf="@id/sell_image"
        app:layout_constraintTop_toTopOf="@id/sell_image" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/receive_image"
        app:layout_constraintStart_toStartOf="@id/sell_label"
        app:layout_constraintTop_toBottomOf="@id/sell_image"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/receive_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="0dp"
        android:rotation="180"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sell_image"
        app:tint="@color/green"
        android:importantForAccessibility="no"
        />

    <TextView
        android:id="@+id/receive_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/receive_image"
        app:layout_constraintStart_toEndOf="@id/receive_image"
        app:layout_constraintTop_toTopOf="@id/receive_image" />

    <TextView
        android:id="@+id/currency_sell_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/eur"
        app:layout_constraintBottom_toBottomOf="@id/sell_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/sell_label" />

    <TextView
        android:id="@+id/currency_receive_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/usd"
        app:layout_constraintBottom_toBottomOf="@id/receive_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/receive_label" />

    <TextView
        android:id="@+id/sell_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/sell_label"
        app:layout_constraintEnd_toStartOf="@id/currency_sell_placeholder"
        app:layout_constraintTop_toTopOf="@id/sell_label"
        tools:text="100.00" />

    <TextView
        android:id="@+id/receive_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="@id/receive_label"
        app:layout_constraintEnd_toStartOf="@id/currency_receive_placeholder"
        app:layout_constraintTop_toTopOf="@id/receive_label"
        tools:text="+110.30" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="12dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/submit"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>